[package]
name = "vm-test"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
ethereum-types = "0.4"
env_logger = "0.6"
hex = "0.3"
cita-vm = {git = "https://github.com/citahub/cita-vm.git", branch = "cita"}
evm = "0.27.0"
primitive-types = { version = "0.9", default-features = false, features = ["rlp"] }

